snapshot-tests/tests/snapshots/parser__bad_keys__newline2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ newline2:1:1
  │
1 │ "
  │ ^ expected `"`
